--- a/source/pages/content/content.wxml
+++ b/source/pages/content/content.wxml
@@ -1,7 +1,7 @@
 <!--pages/content/content.wxml-->
 <import src="../../wxParse/wxParse.wxml" />
-<view class='bg-primary  flex-row bigheader'>
-<view class='txt-white h1 '>{{title}}</view>
+<view class='flex-row bigheader'>
+<view class='h1 '>{{title}}</view>
 </view>
 
 <view style='padding:20rpx;'>
