--- a/source/pages/member/member.wxml
+++ b/source/pages/member/member.wxml
@@ -17,7 +17,7 @@
 </view>
 
 
-<view class='padding-40 white-block margin-top'>
+<view class='padding-40 white-block margin-top' wx:if="{{favcars.length>0}}">
   <view class='h4 txt-bold'>我的收藏</view>
   <view class='flex-row flex-wrap'>
     <navigator url='/pages/car/car?id={{item.id}}' wx:for="{{favcars}}" wx:key="k" class='caritem margin-top'>
