--- a/source/app.wxss
+++ b/source/app.wxss
@@ -72,7 +72,7 @@ view,navigator{
 }
 .txt-light{
   color: #fcfcfc;
-  font-weight: lighter;
+  font-weight: 300;
 }
 .txt-bold{
   font-weight: bolder;
