--- a/source/pages/content/content.wxml
+++ b/source/pages/content/content.wxml
@@ -1,9 +1,6 @@
 <!--pages/content/content.wxml-->
 <import src="../../wxParse/wxParse.wxml" />
-<view class='flex-row bigheader'>
-<view class='h1 '>{{title}}</view>
-</view>
 
-<view style='padding:20rpx;'>
+<view >
             <template is="wxParse" data="{{wxParseData:content.nodes}}" />
 </view>
